Switch to NuGetizer for authgearnetstandardlibrary

--- a/authgearnetstandardlibrary/authgearnetstandardlibrary/authgearnetstandardlibrary.csproj
+++ b/authgearnetstandardlibrary/authgearnetstandardlibrary/authgearnetstandardlibrary.csproj
@@ -13,7 +13,7 @@
     <None Remove="NuGet.Build.Packaging" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="NuGet.Build.Packaging" Version="0.2.5-dev.8">
+    <PackageReference Include="NuGetizer" Version="0.7.5">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
