--- a/authgeariosbinding/authgeariosbinding/authgeariosbinding.csproj
+++ b/authgeariosbinding/authgeariosbinding/authgeariosbinding.csproj
@@ -53,8 +53,8 @@
     <ObjcBindingCoreSource Include="Structs.cs" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="NuGet.Build.Packaging">
-      <Version>0.2.5-dev.8</Version>
+    <PackageReference Include="NuGetizer">
+      <Version>0.7.5</Version>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
