--- a/authgearandroidbinding/authgearandroidbinding/authgearandroidbinding.csproj
+++ b/authgearandroidbinding/authgearandroidbinding/authgearandroidbinding.csproj
@@ -18,6 +18,11 @@
     <AndroidClassParser>class-parse</AndroidClassParser>
     <AndroidCodegenTarget>XAJavaInterop1</AndroidCodegenTarget>
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
+    <PackOnBuild>true</PackOnBuild>
+    <PackageId>authgearandroidbinding</PackageId>
+    <PackageVersion>1.0.0</PackageVersion>
+    <Authors>louischan</Authors>
+    <Description>authgearandroidbinding</Description>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -55,6 +60,11 @@
     <TransformFile Include="Transforms\EnumMethods.xml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="NuGetizer">
+      <Version>0.7.5</Version>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="authgearnetstandardlibrary">
       <Version>1.0.0</Version>
     </PackageReference>
