--- a/authgearandroidbinding/authgearandroidbinding/authgearandroidbinding.csproj
+++ b/authgearandroidbinding/authgearandroidbinding/authgearandroidbinding.csproj
@@ -68,6 +68,13 @@
     <PackageReference Include="authgearnetstandardlibrary">
       <Version>1.0.0</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.Kotlin.StdLib">
+      <Version>1.5.30</Version>
+      <GeneratePathProperty></GeneratePathProperty>
+    </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <LibraryProjectZip Include="Jars\authgearkotlin-release.aar" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.Bindings.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
